make stats break after each name. fix spacing on tagline a little.

--- a/bandradar/static/css/main.css
+++ b/bandradar/static/css/main.css
@@ -229,6 +229,7 @@ a:hover { color: #0a396b; text-decoration: underline; }
   clear: both;
   margin-right: .5em;
   padding-left: 1em;
+  margin-bottom: 1.5em;
 }
 
 
